syntax = "proto3";

package file;

message Footer {
  int32 version = 1;

  int32 contentSize = 8;
  int32 contentStartOffset = 9;
  repeated ContentRange content_range = 10;

  int32 documentSize = 16;
  int32 documentStartOffset = 17;
}

message ContentRange {
  int32 length = 1;
  int32 size = 2;
  int32 offset = 3;
}