syntax = "proto3";

package metadata;

message Metadata {
  int32 version = 1;
  int64 size = 2;
  ByteRange content_metadata = 3;
  // space for other kinds of content
  SectionMetadata section_metadata = 14;
  FileMetadata file_metadata = 15;
}

message FileMetadata {
  string name = 1;
  int64 created_at = 2;
}

message SectionMetadata { repeated ByteRange ranges = 1; }

message ByteRange {
  int32 start = 1;
  int32 end = 2;
}
